--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,11 @@ jobs:
       # run tests!
       - run: npm test
 
-      # Deply app
-      - run: npm run deploy
+      # Deploy app
+      - run: |
+        git config --global user.email $GH_EMAIL
+        git config --global user.name $GH_NAME
+        npm run deploy
 
 
 
