--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,12 @@ jobs:
       - run: npm test
 
       # Deploy app
-      - run: |
-        git config --global user.email $GH_EMAIL
-        git config --global user.name $GH_NAME
-        npm run deploy
+      - deploy:
+          name: Deploy
+          command: |
+            git config --global user.email $GH_EMAIL
+            git config --global user.name $GH_NAME
+            npm run deploy
 
 
 
