--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@
 version: 2
 jobs:
   build:
-    filters:
-      branches:
-        only: master
-        
+    branches:
+      only:
+        - master
+
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
