--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
     "husky": "^1.0.0",
     "lint-staged": "^7.3.0",
     "react": "^16.5.2",
