--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@
 version: 2
 jobs:
   build:
-    branches:
-      only:
-        - master
+    # branches:
+    #   only:
+    #     - master
 
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
-      
+
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -36,7 +36,7 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
+
       # run tests!
       - run: npm test
 
@@ -50,6 +50,3 @@ jobs:
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
             npm run deploy
-
-
-
