--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -m '[ci skip] auto deploy' -d build"
   },
   "husky": {
     "hooks": {
