--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@
 version: 2
 jobs:
   build:
-    # branches:
-    #   only:
-    #     - master
+    branches:
+      only:
+        - master
 
     docker:
       # specify the version you desire here
