--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "homepage": "https://hpbl.github.io/spotties",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "husky": "^1.0.0",
     "lint-staged": "^7.3.0",
+    "querystring": "^0.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
