--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.0.0",
     "husky": "^1.0.0",
     "lint-staged": "^7.3.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
