Updating unsafe dependencies

--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
-    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "react-scripts": "1.1.5",
-    "stylelint": "^9.5.0",
+    "react-scripts": "3.4.3",
+    "stylelint": "^13.7.0",
     "stylelint-config-standard": "^18.2.0"
   },
   "lint-staged": {
@@ -42,5 +41,17 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
