--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       only:
         - master
 
+    resource_class: large
+
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
