--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -m '[ci skip] auto deploy' -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "husky": {
     "hooks": {
